--- a/Nomad/View Controllers/Entries/AddEntryVC.xib
+++ b/Nomad/View Controllers/Entries/AddEntryVC.xib
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AddEntryVC" customModule="Nomad" customModuleProvider="target">
             <connections>
-                <outlet property="Scroller" destination="x4U-gN-oQ6" id="772-P0-VbY"/>
+                <outlet property="chooseButton" destination="lZk-Ew-wkb" id="Lc8-NB-LWR"/>
                 <outlet property="infoTextBox" destination="sdw-eg-ALg" id="T9E-z7-OMR"/>
                 <outlet property="photoImageView" destination="flR-DF-R8P" id="s5f-kw-WbI"/>
                 <outlet property="titleTextBox" destination="O1C-uE-ikn" id="h1d-R0-dXp"/>
@@ -18,70 +18,88 @@
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="x4U-gN-oQ6">
-                    <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                </scrollView>
-                <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" axis="vertical" alignment="top" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="CLf-iv-WVb">
-                    <rect key="frame" x="8" y="49" width="584" height="502"/>
+                <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" alignment="top" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="CLf-iv-WVb">
+                    <rect key="frame" x="8" y="16" width="584" height="362"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Title: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gbV-cp-tbh">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Title: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gbV-cp-tbh">
                             <rect key="frame" x="0.0" y="0.0" width="43" height="21"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" placeholderIntrinsicWidth="500" placeholderIntrinsicHeight="30" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Entry Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="O1C-uE-ikn">
+                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" placeholderIntrinsicWidth="500" placeholderIntrinsicHeight="30" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Entry Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="O1C-uE-ikn">
                             <rect key="frame" x="0.0" y="33" width="584" height="30"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits" autocapitalizationType="words" spellCheckingType="yes" enablesReturnKeyAutomatically="YES"/>
                         </textField>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Description:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q48-wP-PgU">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Description:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q48-wP-PgU">
                             <rect key="frame" x="0.0" y="75" width="93" height="21"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" placeholderIntrinsicWidth="500" placeholderIntrinsicHeight="30" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Entry Description" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="sdw-eg-ALg">
+                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" placeholderIntrinsicWidth="500" placeholderIntrinsicHeight="30" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Entry Description" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="sdw-eg-ALg">
                             <rect key="frame" x="0.0" y="107" width="584" height="30"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                         </textField>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Photo:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V5s-gh-eME">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Photo:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V5s-gh-eME">
                             <rect key="frame" x="0.0" y="149" width="50" height="21"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" highlighted="YES" translatesAutoresizingMaskIntoConstraints="NO" id="flR-DF-R8P">
-                            <rect key="frame" x="0.0" y="182" width="584" height="320"/>
-                            <color key="backgroundColor" red="0.50588235290000005" green="0.83921568629999999" blue="0.67843137249999996" alpha="1" colorSpace="calibratedRGB"/>
-                            <gestureRecognizers/>
-                            <connections>
-                                <outletCollection property="gestureRecognizers" destination="dgA-PA-LVB" appends="YES" id="53I-km-Sae"/>
-                            </connections>
-                        </imageView>
+                        <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="eRt-NI-IBP">
+                            <rect key="frame" x="0.0" y="182" width="584" height="180"/>
+                            <subviews>
+                                <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" highlighted="YES" translatesAutoresizingMaskIntoConstraints="NO" id="flR-DF-R8P">
+                                    <rect key="frame" x="0.0" y="0.0" width="584" height="180"/>
+                                    <color key="backgroundColor" red="0.91790956439393945" green="0.91790956439393945" blue="0.91790956439393945" alpha="1" colorSpace="calibratedRGB"/>
+                                    <gestureRecognizers/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="180" id="20Q-wU-zRx"/>
+                                    </constraints>
+                                </imageView>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lZk-Ew-wkb">
+                                    <rect key="frame" x="0.0" y="0.0" width="584" height="180"/>
+                                    <state key="normal" title="Choose a photo 📷">
+                                        <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                    </state>
+                                    <connections>
+                                        <action selector="selectImage:" destination="-1" eventType="touchUpInside" id="cxq-Mq-I9X"/>
+                                    </connections>
+                                </button>
+                            </subviews>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <constraints>
+                                <constraint firstItem="flR-DF-R8P" firstAttribute="top" secondItem="eRt-NI-IBP" secondAttribute="top" id="31X-UR-MHi"/>
+                                <constraint firstItem="lZk-Ew-wkb" firstAttribute="top" secondItem="eRt-NI-IBP" secondAttribute="top" id="Dkd-bG-aYa"/>
+                                <constraint firstAttribute="trailing" secondItem="flR-DF-R8P" secondAttribute="trailing" id="Jqd-mQ-ie7"/>
+                                <constraint firstItem="flR-DF-R8P" firstAttribute="leading" secondItem="eRt-NI-IBP" secondAttribute="leading" id="Nlv-HP-yKc"/>
+                                <constraint firstAttribute="trailing" secondItem="lZk-Ew-wkb" secondAttribute="trailing" id="YGl-1Y-Fy4"/>
+                                <constraint firstAttribute="bottom" secondItem="flR-DF-R8P" secondAttribute="bottom" id="fjF-OR-bDR"/>
+                                <constraint firstItem="lZk-Ew-wkb" firstAttribute="leading" secondItem="eRt-NI-IBP" secondAttribute="leading" id="ksO-6z-aFE"/>
+                                <constraint firstAttribute="bottom" secondItem="lZk-Ew-wkb" secondAttribute="bottom" id="pPF-dA-fKe"/>
+                            </constraints>
+                        </view>
                     </subviews>
                     <gestureRecognizers/>
                     <constraints>
+                        <constraint firstItem="eRt-NI-IBP" firstAttribute="leading" secondItem="CLf-iv-WVb" secondAttribute="leading" id="2JB-Ph-BpA"/>
                         <constraint firstItem="sdw-eg-ALg" firstAttribute="leading" secondItem="CLf-iv-WVb" secondAttribute="leading" id="59p-qn-cBw"/>
-                        <constraint firstItem="flR-DF-R8P" firstAttribute="leading" secondItem="CLf-iv-WVb" secondAttribute="leading" id="C7x-yf-e1z"/>
                         <constraint firstAttribute="trailing" secondItem="sdw-eg-ALg" secondAttribute="trailing" id="D2P-HA-bsd"/>
+                        <constraint firstAttribute="trailing" secondItem="eRt-NI-IBP" secondAttribute="trailing" id="LBu-ki-kvv"/>
                         <constraint firstItem="O1C-uE-ikn" firstAttribute="leading" secondItem="CLf-iv-WVb" secondAttribute="leading" id="hDE-E3-xRs"/>
                         <constraint firstAttribute="trailing" secondItem="O1C-uE-ikn" secondAttribute="trailing" id="qCJ-TZ-DMt"/>
-                        <constraint firstAttribute="trailing" secondItem="flR-DF-R8P" secondAttribute="trailing" id="x0o-9t-Wkt"/>
                     </constraints>
                 </stackView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="CLf-iv-WVb" secondAttribute="trailing" constant="8" id="YLU-Wa-Ngv"/>
-                <constraint firstItem="CLf-iv-WVb" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="m6F-1S-r7U"/>
+                <constraint firstAttribute="trailing" secondItem="CLf-iv-WVb" secondAttribute="trailing" constant="8" id="NdL-W0-LtA"/>
+                <constraint firstItem="CLf-iv-WVb" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="tjH-b1-wS5"/>
+                <constraint firstItem="CLf-iv-WVb" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="16" id="vDo-2A-ESR"/>
             </constraints>
         </view>
-        <tapGestureRecognizer id="dgA-PA-LVB">
-            <connections>
-                <action selector="selectImage:" destination="-1" id="ZHR-kp-Ol6"/>
-            </connections>
-        </tapGestureRecognizer>
     </objects>
 </document>
